add new page with new feature

--- a/src/app/AllPages/published-article/published-article.page.html
+++ b/src/app/AllPages/published-article/published-article.page.html
@@ -25,3 +25,6 @@
 
 
 </ion-content>
+<ion-footer>
+  <ion-button class="page2-btn" (click)="gotonewPage()">Go to my new page</ion-button>
+</ion-footer>
