design card in page

--- a/src/app/AllPages/my-new/my-new.page.html
+++ b/src/app/AllPages/my-new/my-new.page.html
@@ -7,7 +7,13 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
-  welcome 
+<ion-content padding>
+  <ion-slides [options]="{ slidesPerView: 'auto', zoom: false, grabCursor: true }">
+    <ion-slide *ngFor="let card of [0,1,2,3,4,5,6]" style="width: 150px; height: 200px; border: 2px solid #f8f8f8">
+      <ion-col>
+        <ion-label>Card #{{ card }}</ion-label>
+        <ion-img style="pointer-events:none" src="https://via.placeholder.com/150"></ion-img>
+      </ion-col>
+    </ion-slide>
+  </ion-slides>
 </ion-content>
